# SatisfactoryTools

./: .gitignore  TODO.md  categorized_collection.py  machine.py  material.py  process.py  pyproject.toml  recipe.py  requirements.txt  run.bat  satisfactory_planning-Copy1.ipynb  satisfactory_planning.ipynb
config_parsing/: __init__.py  machines.py  materials.py  recipes.py  standardization.py
core/: material.py  process.py
plotting/: graph.py  sankey.py  summaries.py  tables.py  widgets.py
satisfactory_tools/config/: materials.py  recipes.py
satisfactory_tools/core/: machine.py  process.py
satisfactory_tools/plotting/: widgets.py
satisfactory_tools/ui/: __init__.py  config.py  widgets.py
src/config/: __init__.py
src/core/: recipe.py
src/plotting/: __init__.py  graph.py  sankey.py  summaries.py
src/ui/: __init__.py  widgets.py
tests/: __init__.py  test_materials.py  test_process_node.py
